assets/css/description.scss
.custom-shape {
  background: linear-gradient(200deg, #00619B, #16324F);
  background-size: 200% 200%;
  padding: 20px;
  min-height: 30vh;
  animation: Gradient 6s ease infinite, slideIn 2s forwards;
}
.box-shape {   
  border-radius: 15px;      /* Rounded corners */
  padding: 20px;            
  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);  /*shadow for text depth */
}
@keyframes fadeInOut {
  0% {
    opacity: 0;
  }

  25% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

#title,
#subtitle {
  font-size: 2em;
  opacity: 0;
  animation: fadeInOut 10s infinite;
}

#subtitle {
  animation: fadeInOut 10s 5s infinite;
}

@keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 0% 50%;
  }
}

@keyframes slideIn {
  from {
    transform: translateY(-70%);
    opacity: 0;
  }

  to {
    transform: translateY(0);
    opacity: 1;
  }
}

#title h1 {
  color: #fefefe;
  font-size: 5vw;
  margin: 3.5px;
}

@media (max-width: 768px) {
  #title {
    font-size: 1.5em;
  }

  #subtitle {
    font-size: 1.2em;
  }
}
.box-reference {
  transition: all 0.3s ease;
  position: relative;
}

.reference-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease;
}

.box-reference:active + .reference-content,
.box-reference:focus + .reference-content {
  max-height: 1000px;  // Adjust this value as needed
}
.box4 {
  background-color: #2155a1;
}
.references-content ul li a {
  color: white;
  text-decoration: none;
  transition: color 0.3s ease;
}

.references-content ul li a:hover {
  color: #c7bdbd;
}

.references-content ul li {
  color: white;
}

.reference-header {
  position: relative; 
  display: inline-block; 
}

.close-btn {
  position: absolute; 
  right: 0; 
  top: 50%; 
  transform: translateY(-50%); 
  border-radius: 5px;  /* Adjust for desired corner roundness */
  display: inline-block; 
  width: 30px;  /* Adjust for desired button width */
  height: 30px;  /* Adjust for desired button height */
  line-height: 30px;  /* Adjust to center the × vertically */
  text-align: center; 
  margin-left: 10px; 
  cursor: pointer; 
  transition: background-color 0.3s ease; 
}

.close-btn:hover {
  background-color: rgba(255, 255, 255, 0.2); 
}
/* human-practices page */

#story {
  display: block;
}
.toggle-buttons {
  margin-bottom: 20px;
}

.box-container {
  display: flex;
  justify-content: space-between;
  margin: 20px 0;
}

.box {
  background-color: global.$color-white;
  color: global.$header-color;
  padding: 20px;
  flex: 1;
  margin: 0 10px;
  text-align: center;
  border-radius: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  z-index: 2;
  position: relative;
}

.box:hover {
  background-color: rgb(182, 182, 223);
}

#human-practices {
  display: block;
}
.timeline {
  width: 200px;
  border-left: 2px solid #333;
  padding-left: 10px;
}

.entry {
  margin-bottom: 20px;
}

.name {
  cursor: pointer;
  padding: 5px 10px;
  background-color: #eee;
  border-radius: 5px;
  position: relative;
}

.details {
  display: none;  /* Hide by default */
  padding: 5px 10px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-top: 10px;
  position: relative;
  z-index: 1;  /* Ensure it's in front when displayed */
}
.humanpracticespic img {
  width:160%;
  height: 100%;
  transform:translateX(-22%);
}

